# teia-logos

./: README.md  index.html  press.html  pride.html  pyproject.toml  sync.sh  vite-manifest.json
.github/workflows/: deploy.yml
_app/: error.svelte-29dfe337.js  manifest.json  start-49e8a39c.js  start-ac50e29e.js  start-afc28e46.js  start-f05dea33.js  start-f588b5fd.js  version.json
_app/assets/pages/: __layout.svelte-243f8574.css  __layout.svelte-fc92ecf8.css
_app/chunks/: store-d19807ab.js  vendor-dc6ec5b6.js
_app/immutable/: error.svelte-140c017a.js  error.svelte-68d3fb1b.js  manifest.json  start-06d5d576.js  start-0ec40198.js  start-1dcd5006.js  start-1e76b238.js  start-24b8ded5.js  start-3015527a.js  start-310b902e.js  start-3ba7b260.js  start-4a2ac825.js  start-877d2d69.js  start-966c9dc9.js  start-ab26d047.js  start-b021b524.js  start-c1b3990f.js
_app/immutable/assets/: LogoViewer-7b85877c.css  LogoViewer-ae59cc5b.css  _layout-1094783f.css  _layout-3300cec4.css  _layout-780eb106.css  _layout-f3eeb95b.css  _page-005400a3.css  _page-11d7eb8d.css  _page-614f6b1e.css  _page-cea46f76.css
_app/immutable/chunks/: 0-02bdf478.js  0-1b90a261.js  0-791f30e2.js  0-a0300b7c.js  0-e326a322.js  0-e551975d.js  0-f49a501b.js  1-3e83696f.js  1-48b199bf.js  1-5db72ca3.js  1-7f4ada25.js  1-8c7d4396.js  1-e377a17b.js  1-e7f662f7.js  (+45 more)
_app/pages/: __layout.svelte-72acdb51.js  index.svelte-fefaefc1.js
scripts/: sync.py
website/: .gitignore  README.md  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  vite.config.js
website/src/: app.css  app.html
(+53 files in other folders)
